Fixed layout issues in index.html and styles.css

--- a/styles.css
+++ b/styles.css
@@ -54,12 +54,6 @@ a:active {
     transform: translateY(5%);
 }
 
-.content {
-    /* padding-left: 150px;
-    padding-right: 150px; */
-    /*pad content to be offset a bit to the right*/
-}
-
 h1 {
     font-size: 25px;
 }
@@ -74,17 +68,18 @@ h2 {
 }
 
 section {
+    top: 100px;
     height: 100vh;
     width: 100vw;
-    top: 100px;
+    min-height: 800px;
+    min-width: 800px;
     /* background-color:blueviolet; */
     /* border: solid; */
     /*pad content to be a bit down*/
 }
 
-.text {
-    padding-top: 100px;
-    padding-left: 100px;
+.container {
+    padding: 100px;
 }
 
 /* #about, #projects {
